conf/external-services/birdnetpi-endpoint.yaml
---
kind: Endpoints
apiVersion: v1
metadata:
  name: "birdnetpi-http"
subsets:
  - addresses:
      - ip: "192.168.50.8"
    ports:
      - port: 80
        name: "birdnetpi"
