conf/external-services/birdnetpi-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: "birdnetpi-http"
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
      name: "birdnetpi"
