conf/external-services/homeassistant-endpoint.yaml
---
kind: Endpoints
apiVersion: v1
metadata:
  name: "homeassistant-http"
subsets:
  - addresses:
      - ip: "192.168.50.16"
    ports:
      - port: 8123
        name: "homeassistant"
