conf/external-services/homeassistant-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: "homeassistant-http"
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 8123
      targetPort: 8123
      name: "homeassistant"
