conf/external-services/jellyfin-endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: jellyfin-svc-1
  labels:
    kubernetes.io/service-name: jellyfin-svc
    endpointslice.kubernetes.io/managed-by: cluster-admin
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.50.13"
    conditions:
      ready: true    
ports:
  - port: 8096
    name: jellyfin
