conf/external-services/karakeep-endpoint.yaml
---
kind: Endpoints
apiVersion: v1
metadata:
  name: "karakeep-http"
subsets:
  - addresses:
      - ip: "192.168.50.13"
    ports:
      - port: 3001
        name: "karakeep"
