conf/external-services/karakeep-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: "karakeep-http"
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 3001
      targetPort: 3001
      name: "karakeep"
