conf/external-services/pocketid-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: "pocketid-svc"
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 1411
      targetPort: 1411
      name: "pocketid"
