conf/external-services/postgresql-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: "postgresql-db"
spec:
  type: ClusterIP
  ports:
    - name: "postgresql"
      protocol: "TCP"
      port: 5432
      targetPort: 5432
