conf/external-services/postgresql.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: "postgresql-db"
  labels:
    kubernetes.io/service-name: "postgresql-db"
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.50.6
    nodeName: rpiv6
ports:
  - name: postgresql
    protocol: TCP
    port: 5432

---
kind: Service
apiVersion: v1
metadata:
  name: "postgresql-db"
spec:
  type: ClusterIP
  ports:
    - name: "postgresql"
      protocol: "TCP"
      port: 5432
      targetPort: 5432
