conf/external-services/homeassistant.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: "homeassistant-svc-1"
  labels:
    kubernetes.io/service-name: "homeassistant-svc"
    endpointslice.kubernetes.io/managed-by: cluster-admin
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.50.16
    conditions:
      ready: true        
ports:
  - name: homeassistant
    protocol: TCP
    port: 8123

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-homeassistant-http

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ha.idcrook.dev`)
      services:
        - name: homeassistant-svc
          port: 8123
      # middlewares:
      #   - name: my-fail2ban
  tls: {}

---
kind: Service
apiVersion: v1
metadata:
  name: "homeassistant-svc"
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 8123
      targetPort: 8123
      name: "homeassistant"
