conf/external-services/karakeep-ingress-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-karakeep-http

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`keep.idcrook.dev`)
      services:
        - name: karakeep-svc
          port: 3001
      # middlewares:
      #   - name: my-fail2ban
  tls: {}
