conf/external-services/karakeep.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: karakeep-svc-1
  labels:
    kubernetes.io/service-name: karakeep-svc
    endpointslice.kubernetes.io/managed-by: cluster-admin
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.50.13"
    conditions:
      ready: true    
ports:
  - port: 3001
    name: karakeep

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-karakeep-http

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`keep.idcrook.dev`)
      services:
        - name: karakeep-svc
          port: 3001
      # middlewares:
      #   - name: my-fail2ban
  tls: {}

---
kind: Service
apiVersion: v1
metadata:
  name: "karakeep-svc"
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
      name: "karakeep"
