conf/external-services/pocketid.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pocketid-svc-1
  labels:
    kubernetes.io/service-name: pocketid-svc
    endpointslice.kubernetes.io/managed-by: cluster-admin
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.50.13"
    conditions:
      ready: true    
ports:
  - port: 1411
    name: pocketid

# ---
# kind: Endpoints
# apiVersion: v1
# metadata:
#   name: "pocketid-http"
# subsets:
#   - addresses:
#       - ip: "192.168.50.13"
#     ports:
#       - port: 1411
#         name: "pocketid"

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-pocketid-http

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pocketid.idcrook.dev`)
      services:
        - name: pocketid-svc
          port: 1411
  tls: {}
  
---
kind: Service
apiVersion: v1
metadata:
  name: "pocketid-svc"
spec:
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 1411
      targetPort: 1411
      name: "pocketid"
